# searpc-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: CLAUDE.md
.github/: RELEASE.md
.github/workflows/: ci.yml  release.yml
seaf-cli/: Cargo.toml  README.md
seaf-cli/src/: config.rs  http_client.rs  main.rs  rpc_client.rs
searpc/: Cargo.toml
searpc-macro/: Cargo.toml
searpc-macro/src/: lib.rs
searpc/examples/: async_demo_client.rs  demo_client.rs  simple_macro_test.rs  typed_client.rs
searpc/src/: async_client.rs  async_tcp_transport.rs  async_transport.rs  client.rs  error.rs  lib.rs  protocol.rs  tcp_transport.rs  transport.rs  types.rs  unix_transport.rs
