[package]
name = "seaf-cli"
version = "0.1.0"
edition = "2021"
authors = ["Lee <lee@example.com>"]
description = "Seafile command-line client in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
searpc = { path = "../searpc" }
searpc-macro = { path = "../searpc-macro" }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
