[package]
name = "seaf-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Seafile command-line client in Rust"

[dependencies]
searpc.workspace = true
searpc-macro.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
