[package]
name = "seaf-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Seafile command-line client in Rust"

[dependencies]
searpc.workspace = true
searpc-macro.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rpassword = "7.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
