[package]
name = "searpc-macro"
version = "0.1.0"
edition = "2021"
authors = ["Lee <lee@example.com>"]
description = "Procedural macros for searpc-rs - type-safe RPC client generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/haiwen/searpc-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
