[package]
name = "searpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client for Searpc RPC framework (Seafile-compatible)"
keywords = ["rpc", "seafile", "searpc"]
categories = ["network-programming", "api-bindings"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Async support (optional, enabled by default)
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# Proc-macro support (optional, enabled by default)
searpc-macro = { workspace = true, optional = true }

[features]
default = ["async", "macro"]
async = ["tokio", "async-trait"]
macro = ["searpc-macro"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
